# spark-opengles

./: .gitignore  CMakeLists.txt  ProjectHome.md  SetUpiPhoneSDKversion.md  UsefulLinks.md
SDL iOS Application/: BasicDemo.cpp  BasicDemo.h  main.c
SDL iOS Application/___PROJECTNAME___.xcodeproj/: project.pbxproj
cmake/: FindOpenGLES.cmake  iOS.cmake
cmake/.svn/: wc.db
demos/: CMakeLists.txt
demos/src/: BasicDemo.cpp
include/Core/: SPK_Emitter.h  SPK_Modifier.h  SPK_Particle.h  SPK_Renderer.h
include/Extensions/Emitters/: SPK_NormalEmitter.h  SPK_SphericEmitter.h  SPK_StraightEmitter.h
include/Extensions/Renderers/: SPK_QuadRendererInterface.h
include/RenderingAPIs/DX9/: SPK_DX9QuadRenderer.h
include/RenderingAPIs/OpenGL/: SPK_GLExtHandler.h  SPK_GLQuadRenderer.h  SPK_GLRenderer.h  SPK_GL_DEF.h
src/: CMakeLists.txt
src/Core/: SPK_Group.cpp  SPK_Modifier.cpp  SPK_Particle.cpp
src/Extensions/Emitters/: SPK_NormalEmitter.cpp  SPK_RandomEmitter.cpp  SPK_SphericEmitter.cpp  SPK_StraightEmitter.cpp
src/Extensions/Modifiers/: SPK_LinearForce.cpp  SPK_Vortex.cpp
src/RenderingAPIs/DX9/: SPK_DX9BufferHandler.cpp  SPK_DX9PointRenderer.cpp  SPK_DX9QuadRenderer.cpp
src/RenderingAPIs/OpenGL/: SPK_GLExtHandler.cpp  SPK_GLQuadRenderer.cpp  SPK_GLRenderer.cpp
